// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tree/demo/basic.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-checkbox ant-tree-checkbox-checked"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-disabled ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked ant-tree-treenode-selected"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <i
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="caret-down"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-checkbox ant-tree-checkbox-checked ant-tree-checkbox-disabled"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
          title="parent 1-0"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-0
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="caret-down"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-checkbox ant-tree-checkbox-checked"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="parent 1-1"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-1
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="ant-tree-title"
              >
                <span
                  style="color:#1890ff"
                >
                  sss
                </span>
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/basic-controlled.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-indeterminate"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-checkbox ant-tree-checkbox-indeterminate"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="0-0"
    >
      <span
        class="ant-tree-title"
      >
        0-0
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="caret-down"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-checkbox ant-tree-checkbox-checked"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="0-0-0"
        >
          <span
            class="ant-tree-title"
          >
            0-0-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="caret-down"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-checkbox"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="0-0-1"
        >
          <span
            class="ant-tree-title"
          >
            0-0-1
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-0
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-1
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-checkbox"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="0-0-2"
        >
          <span
            class="ant-tree-title"
          >
            0-0-2
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-checkbox"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
      title="0-1"
    >
      <span
        class="ant-tree-title"
      >
        0-1
      </span>
    </span>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher-noop"
    />
    <span
      class="ant-tree-checkbox"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
      title="0-2"
    >
      <span
        class="ant-tree-title"
      >
        0-2
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/customized-icon.md correctly 1`] = `
<ul
  class="ant-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-iconEle ant-tree-icon__customize"
      >
        <i
          class="anticon anticon-smile-o"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="smile-o"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm311.1 823.1c-40.4 40.4-87.5 72.2-139.9 94.3C629 940.4 571.4 952 512 952s-117-11.6-171.2-34.5c-52.4-22.2-99.4-53.9-139.9-94.3-40.4-40.4-72.2-87.5-94.3-139.9C83.6 629 72 571.4 72 512s11.6-117 34.5-171.2c22.2-52.4 53.9-99.4 94.3-139.9 40.4-40.4 87.5-72.2 139.9-94.3C395 83.6 452.6 72 512 72s117 11.6 171.2 34.5c52.4 22.2 99.4 53.9 139.9 94.3 40.4 40.4 72.2 87.5 94.3 139.9C940.4 395 952 452.6 952 512s-11.6 117-34.5 171.2c-22.2 52.4-53.9 99.5-94.4 139.9z"
            />
            <path
              d="M640.3 565.2c-19.9 0-36 16.1-36 36 0 50.9-41.4 92.3-92.3 92.3s-92.3-41.4-92.3-92.3c0-19.9-16.1-36-36-36s-36 16.1-36 36c0 90.6 73.7 164.3 164.3 164.3s164.3-73.7 164.3-164.3c0-19.9-16.1-36-36-36zM194.2 382.4a60 60 0 1 0 120 0 60 60 0 1 0-120 0zM709.5 382.4a60 60 0 1 0 120 0 60 60 0 1 0-120 0z"
            />
          </svg>
        </i>
      </span>
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open ant-tree-treenode-selected"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal ant-tree-node-selected"
          title="leaf"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              class="anticon anticon-meh-o"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="meh-o"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm311.1 823.1c-40.4 40.4-87.5 72.2-139.9 94.3C629 940.4 571.4 952 512 952c-59.4 0-117-11.6-171.2-34.5-52.4-22.2-99.4-53.9-139.9-94.3-40.4-40.4-72.2-87.5-94.3-139.9C83.6 629 72 571.4 72 512c0-59.4 11.6-117 34.5-171.2 22.2-52.4 53.9-99.4 94.3-139.9 40.4-40.4 87.5-72.2 139.9-94.3C395 83.6 452.6 72 512 72c59.4 0 117 11.6 171.2 34.5 52.4 22.2 99.4 53.9 139.9 94.3 40.4 40.4 72.2 87.5 94.3 139.9C940.4 395 952 452.6 952 512c0 59.4-11.6 117-34.5 171.2-22.2 52.4-53.9 99.5-94.4 139.9z"
                />
                <path
                  d="M194.2 382.4a60 60 0 1 0 120 0 60 60 0 1 0-120 0zM709.5 382.4a60 60 0 1 0 120 0 60 60 0 1 0-120 0zM642.8 705.8h-264c-19.9 0-36 16.1-36 36s16.1 36 36 36h264c19.9 0 36-16.1 36-36s-16.1-36-36-36z"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              class="anticon anticon-frown-o"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="frown-o"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm311.1 823.1c-40.4 40.4-87.5 72.2-139.9 94.3C629 940.4 571.4 952 512 952s-117-11.6-171.2-34.5c-52.4-22.2-99.4-53.9-139.9-94.3-40.4-40.4-72.2-87.5-94.3-139.9C83.6 629 72 571.4 72 512s11.6-117 34.5-171.2c22.2-52.4 53.9-99.4 94.3-139.9 40.4-40.4 87.5-72.2 139.9-94.3C395 83.6 452.6 72 512 72s117 11.6 171.2 34.5c52.4 22.2 99.4 53.9 139.9 94.3 40.4 40.4 72.2 87.5 94.3 139.9C940.4 395 952 452.6 952 512s-11.6 117-34.5 171.2c-22.2 52.4-53.9 99.5-94.4 139.9z"
                />
                <path
                  d="M640.3 765.5c-19.9 0-36-16.1-36-36 0-50.9-41.4-92.3-92.3-92.3s-92.3 41.4-92.3 92.3c0 19.9-16.1 36-36 36s-36-16.1-36-36c0-90.6 73.7-164.3 164.3-164.3s164.3 73.7 164.3 164.3c0 19.9-16.1 36-36 36zM194.2 382.4a60 60 0 1 0 120 0 60 60 0 1 0-120 0zM709.5 382.4a60 60 0 1 0 120 0 60 60 0 1 0-120 0z"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/directory.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-directory"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 0"
    >
      <span
        class="ant-tree-iconEle ant-tree-icon__customize"
      >
        <i
          class="anticon anticon-folder-open"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="folder-open"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M960 384.4V264c0-39.8-32.2-72-72-72H489l-25-77.9C454.5 84.2 426.8 64 395.4 64H72C32.2 64 0 96.2 0 136v688.3c0 3.5.3 7 .8 10.4 0 .1 0 .3.1.4.2 1 .3 2 .5 3 .1.3.1.6.2.8.2.8.4 1.7.6 2.5.1.5.3 1 .4 1.5l.3 1.2c.3 1.1.6 2.1 1 3.1v.1c3.7 10.8 9.9 20.4 18 28.2l.2.2c.8.7 1.5 1.4 2.3 2.1.4.3.8.7 1.1 1 .4.3.7.6 1.1.9.6.5 1.3 1 2 1.6.2.1.4.3.6.4.8.6 1.7 1.2 2.5 1.8.1 0 .1.1.2.1 9.4 6.3 20.4 10.6 32.5 11.8.2 0 .3 0 .5.1 1.1.1 2.1.2 3.2.2h.6c1.1 0 2.2.1 3.3.1h788c33 0 61.8-22.5 69.9-54.5l92-368c10.6-42.6-19.3-84.2-61.9-88.9zM72 136h323.2l41.2 128H888v120H164c-33 0-61.8 22.5-69.9 54.5L72 527.3V136zm788 688H72l92-368h788l-92 368z"
            />
          </svg>
        </i>
      </span>
      <span
        class="ant-tree-title"
      >
        parent 0
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 0-0"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              class="anticon anticon-file"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="file"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M875.1 301.8l-278-280.5c-4.5-4.5-9.5-8.3-14.8-11.5-1.4-.8-2.9-1.6-4.4-2.3-.9-.5-1.9-.9-2.8-1.3-9.1-4-19-6.2-29.1-6.2H200c-39.8 0-72 32.2-72 72v880c0 39.8 32.2 72 72 72h624c39.8 0 72-32.2 72-72V352.5c0-19-7.5-37.2-20.9-50.7zM783.8 312H584V110.4L783.8 312zM824 952H200V72h312v240c0 39.8 32.2 72 72 72h240v568z"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 0-0
          </span>
        </span>
      </li>
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 0-1"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              class="anticon anticon-file"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="file"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M875.1 301.8l-278-280.5c-4.5-4.5-9.5-8.3-14.8-11.5-1.4-.8-2.9-1.6-4.4-2.3-.9-.5-1.9-.9-2.8-1.3-9.1-4-19-6.2-29.1-6.2H200c-39.8 0-72 32.2-72 72v880c0 39.8 32.2 72 72 72h624c39.8 0 72-32.2 72-72V352.5c0-19-7.5-37.2-20.9-50.7zM783.8 312H584V110.4L783.8 312zM824 952H200V72h312v240c0 39.8 32.2 72 72 72h240v568z"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 0-1
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-iconEle ant-tree-icon__customize"
      >
        <i
          class="anticon anticon-folder-open"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="folder-open"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M960 384.4V264c0-39.8-32.2-72-72-72H489l-25-77.9C454.5 84.2 426.8 64 395.4 64H72C32.2 64 0 96.2 0 136v688.3c0 3.5.3 7 .8 10.4 0 .1 0 .3.1.4.2 1 .3 2 .5 3 .1.3.1.6.2.8.2.8.4 1.7.6 2.5.1.5.3 1 .4 1.5l.3 1.2c.3 1.1.6 2.1 1 3.1v.1c3.7 10.8 9.9 20.4 18 28.2l.2.2c.8.7 1.5 1.4 2.3 2.1.4.3.8.7 1.1 1 .4.3.7.6 1.1.9.6.5 1.3 1 2 1.6.2.1.4.3.6.4.8.6 1.7 1.2 2.5 1.8.1 0 .1.1.2.1 9.4 6.3 20.4 10.6 32.5 11.8.2 0 .3 0 .5.1 1.1.1 2.1.2 3.2.2h.6c1.1 0 2.2.1 3.3.1h788c33 0 61.8-22.5 69.9-54.5l92-368c10.6-42.6-19.3-84.2-61.9-88.9zM72 136h323.2l41.2 128H888v120H164c-33 0-61.8 22.5-69.9 54.5L72 527.3V136zm788 688H72l92-368h788l-92 368z"
            />
          </svg>
        </i>
      </span>
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 1-0"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              class="anticon anticon-file"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="file"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M875.1 301.8l-278-280.5c-4.5-4.5-9.5-8.3-14.8-11.5-1.4-.8-2.9-1.6-4.4-2.3-.9-.5-1.9-.9-2.8-1.3-9.1-4-19-6.2-29.1-6.2H200c-39.8 0-72 32.2-72 72v880c0 39.8 32.2 72 72 72h624c39.8 0 72-32.2 72-72V352.5c0-19-7.5-37.2-20.9-50.7zM783.8 312H584V110.4L783.8 312zM824 952H200V72h312v240c0 39.8 32.2 72 72 72h240v568z"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 1-0
          </span>
        </span>
      </li>
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 1-1"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              class="anticon anticon-file"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="file"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M875.1 301.8l-278-280.5c-4.5-4.5-9.5-8.3-14.8-11.5-1.4-.8-2.9-1.6-4.4-2.3-.9-.5-1.9-.9-2.8-1.3-9.1-4-19-6.2-29.1-6.2H200c-39.8 0-72 32.2-72 72v880c0 39.8 32.2 72 72 72h624c39.8 0 72-32.2 72-72V352.5c0-19-7.5-37.2-20.9-50.7zM783.8 312H584V110.4L783.8 312zM824 952H200V72h312v240c0 39.8 32.2 72 72 72h240v568z"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 1-1
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/draggable.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide draggable-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
          />
        </svg>
      </i>
    </span>
    <span
      aria-grabbed="true"
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open draggable"
      draggable="true"
      title="0-0"
    >
      <span
        class="ant-tree-title"
      >
        0-0
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="caret-down"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
              />
            </svg>
          </i>
        </span>
        <span
          aria-grabbed="true"
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open draggable"
          draggable="true"
          title="0-0-0"
        >
          <span
            class="ant-tree-title"
          >
            0-0-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <i
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="caret-down"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
              />
            </svg>
          </i>
        </span>
        <span
          aria-grabbed="true"
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close draggable"
          draggable="true"
          title="0-0-1"
        >
          <span
            class="ant-tree-title"
          >
            0-0-1
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          aria-grabbed="true"
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
          draggable="true"
          title="0-0-2"
        >
          <span
            class="ant-tree-title"
          >
            0-0-2
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
          />
        </svg>
      </i>
    </span>
    <span
      aria-grabbed="true"
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close draggable"
      draggable="true"
      title="0-1"
    >
      <span
        class="ant-tree-title"
      >
        0-1
      </span>
    </span>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher-noop"
    />
    <span
      aria-grabbed="true"
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
      draggable="true"
      title="0-2"
    >
      <span
        class="ant-tree-title"
      >
        0-2
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/dynamic.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="ant-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="ant-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class=""
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher-noop"
    />
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
      title="Tree Node"
    >
      <span
        class="ant-tree-title"
      >
        Tree Node
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/line.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide ant-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-minus-square-o ant-tree-switcher-line-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="minus-square-o"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M888.5 135.5v753.1h-753V135.5h753m0-72h-753c-39.8 0-72 32.2-72 72v753.1c0 39.8 32.2 72 72 72h753.1c39.8 0 72-32.2 72-72V135.5c-.1-39.8-32.3-72-72.1-72z"
          />
          <path
            d="M731.5 549h-441c-19.9 0-36-16.1-36-36s16.1-36 36-36h441c19.9 0 36 16.1 36 36s-16.1 36-36 36z"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            class="anticon anticon-minus-square-o ant-tree-switcher-line-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="minus-square-o"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M888.5 135.5v753.1h-753V135.5h753m0-72h-753c-39.8 0-72 32.2-72 72v753.1c0 39.8 32.2 72 72 72h753.1c39.8 0 72-32.2 72-72V135.5c-.1-39.8-32.3-72-72.1-72z"
              />
              <path
                d="M731.5 549h-441c-19.9 0-36-16.1-36-36s16.1-36 36-36h441c19.9 0 36 16.1 36 36s-16.1 36-36 36z"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="parent 1-0"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <i
                class="anticon anticon-file ant-tree-switcher-line-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M875.1 301.8l-278-280.5c-4.5-4.5-9.5-8.3-14.8-11.5-1.4-.8-2.9-1.6-4.4-2.3-.9-.5-1.9-.9-2.8-1.3-9.1-4-19-6.2-29.1-6.2H200c-39.8 0-72 32.2-72 72v880c0 39.8 32.2 72 72 72h624c39.8 0 72-32.2 72-72V352.5c0-19-7.5-37.2-20.9-50.7zM783.8 312H584V110.4L783.8 312zM824 952H200V72h312v240c0 39.8 32.2 72 72 72h240v568z"
                  />
                </svg>
              </i>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <i
                class="anticon anticon-file ant-tree-switcher-line-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M875.1 301.8l-278-280.5c-4.5-4.5-9.5-8.3-14.8-11.5-1.4-.8-2.9-1.6-4.4-2.3-.9-.5-1.9-.9-2.8-1.3-9.1-4-19-6.2-29.1-6.2H200c-39.8 0-72 32.2-72 72v880c0 39.8 32.2 72 72 72h624c39.8 0 72-32.2 72-72V352.5c0-19-7.5-37.2-20.9-50.7zM783.8 312H584V110.4L783.8 312zM824 952H200V72h312v240c0 39.8 32.2 72 72 72h240v568z"
                  />
                </svg>
              </i>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <i
                class="anticon anticon-file ant-tree-switcher-line-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M875.1 301.8l-278-280.5c-4.5-4.5-9.5-8.3-14.8-11.5-1.4-.8-2.9-1.6-4.4-2.3-.9-.5-1.9-.9-2.8-1.3-9.1-4-19-6.2-29.1-6.2H200c-39.8 0-72 32.2-72 72v880c0 39.8 32.2 72 72 72h624c39.8 0 72-32.2 72-72V352.5c0-19-7.5-37.2-20.9-50.7zM783.8 312H584V110.4L783.8 312zM824 952H200V72h312v240c0 39.8 32.2 72 72 72h240v568z"
                  />
                </svg>
              </i>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <i
            class="anticon anticon-plus-square-o ant-tree-switcher-line-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="plus-square-o"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M888.5 135.5v753.1h-753V135.5h753m0-72h-753c-39.8 0-72 32.2-72 72v753.1c0 39.8 32.2 72 72 72h753.1c39.8 0 72-32.2 72-72V135.5c-.1-39.8-32.3-72-72.1-72z"
              />
              <path
                d="M732 476.5H548.5V293c0-19.9-16.1-36-36-36s-36 16.1-36 36v183.5H292c-19.9 0-36 16.1-36 36s16.1 36 36 36h184.5V731c0 19.9 16.1 36 36 36s36-16.1 36-36V548.5H732c19.9 0 36-16.1 36-36s-16.1-36-36-36z"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
          title="parent 1-1"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-1
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <i
            class="anticon anticon-plus-square-o ant-tree-switcher-line-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="plus-square-o"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M888.5 135.5v753.1h-753V135.5h753m0-72h-753c-39.8 0-72 32.2-72 72v753.1c0 39.8 32.2 72 72 72h753.1c39.8 0 72-32.2 72-72V135.5c-.1-39.8-32.3-72-72.1-72z"
              />
              <path
                d="M732 476.5H548.5V293c0-19.9-16.1-36-36-36s-36 16.1-36 36v183.5H292c-19.9 0-36 16.1-36 36s16.1 36 36 36h184.5V731c0 19.9 16.1 36 36 36s36-16.1 36-36V548.5H732c19.9 0 36-16.1 36-36s-16.1-36-36-36z"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
          title="parent 1-2"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-2
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/search.md correctly 1`] = `
<div>
  <span
    class="ant-input-search ant-input-affix-wrapper"
    style="margin-bottom:8px"
  >
    <input
      class="ant-input"
      placeholder="Search"
      type="text"
    />
    <span
      class="ant-input-suffix"
    >
      <i
        class="anticon anticon-search ant-input-search-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="search"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M949.5 898.5L743.8 692.9C798.9 626.4 832 541.1 832 448c0-212.1-171.9-384-384-384S64 235.9 64 448s171.9 384 384 384c93.1 0 178.4-33.1 244.9-88.2l205.7 205.7c7 7 16.2 10.5 25.5 10.5s18.4-3.5 25.5-10.5c13.9-14.1 13.9-36.9-.1-51zm-380.1-163C531 751.8 490.2 760 448 760s-83-8.2-121.4-24.5c-37.1-15.7-70.5-38.2-99.2-66.9-28.7-28.7-51.2-62.1-66.9-99.2C144.2 531 136 490.2 136 448s8.2-83 24.5-121.4c15.7-37.1 38.2-70.5 66.9-99.2 28.7-28.7 62.1-51.2 99.2-66.9C365 144.2 405.8 136 448 136s83 8.2 121.4 24.5c37.1 15.7 70.5 38.2 99.2 66.9 28.7 28.7 51.2 62.1 66.9 99.2C751.8 365 760 405.8 760 448s-8.2 83-24.5 121.4c-15.7 37.1-38.2 70.5-66.9 99.2-28.7 28.7-62 51.2-99.2 66.9z"
          />
        </svg>
      </i>
    </span>
  </span>
  <ul
    class="ant-tree ant-tree-icon-hide"
    role="tree"
    unselectable="on"
  >
    <li
      class="ant-tree-treenode-switcher-close"
      role="treeitem"
    >
      <span
        class="ant-tree-switcher ant-tree-switcher_close"
      >
        <i
          class="anticon anticon-caret-down ant-tree-switcher-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="caret-down"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
            />
          </svg>
        </i>
      </span>
      <span
        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="ant-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-0
          </span>
        </span>
      </span>
    </li>
    <li
      class="ant-tree-treenode-switcher-close"
      role="treeitem"
    >
      <span
        class="ant-tree-switcher ant-tree-switcher_close"
      >
        <i
          class="anticon anticon-caret-down ant-tree-switcher-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="caret-down"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M76.3 392.3l403.1 489.1c16.9 18.9 46.5 18.9 63.4 0l405.1-489.1c24.4-27.4 5-70.8-31.7-70.8H108.1c-36.8 0-56.3 43.4-31.8 70.8z"
            />
          </svg>
        </i>
      </span>
      <span
        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="ant-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-1
          </span>
        </span>
      </span>
    </li>
    <li
      class="ant-tree-treenode-switcher-close"
      role="treeitem"
    >
      <span
        class="ant-tree-switcher ant-tree-switcher-noop"
      />
      <span
        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
        title=""
      >
        <span
          class="ant-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-2
          </span>
        </span>
      </span>
    </li>
  </ul>
</div>
`;
